tests/experimental/success/reset_counters.lus
node greycounter () returns (out: bool);
var a, b: bool; 
let
  a = false -> not pre b;
  b = false -> pre a;
  out = a and b;
tel

node intcounter (const max: int) returns (out: bool);
var t: int; 
let
  t = 0 -> if pre t = max then 0 else pre t + 1;
  out = t = 2;
tel

node top (reset: bool) returns (OK, OK2: bool);
var b, d: bool;
let
  b = (restart greycounter every reset)();
  d = (restart intcounter every reset)(3);
  OK = b = d;
  OK2 = not d;
  --%PROPERTY OK;
tel